# VClinic

./: .gitignore  README.md  build.sh  build_bench.sh  build_clean.sh  build_debug.sh  mem_overhead.py  run_benchmarks.sh  run_benchmarks_scale.sh
.github/workflows/: build.yml
scripts/bench_tool/: NPB3.4-OMP.make.patch
scripts/build_tool/: cmake_version.sh  env_clean.sh  env_init.sh  gcc_version.sh  hpc_measurements_to_database.sh  hpcviewer_test.sh  machine_custom_hpc_fmt.sh.template  make.sh  make_clean.sh  make_tests.sh  make_tests_all.sh  remake.sh  signal_test.sh
scripts/build_tool/temp_solution/: aarch64-fix-reg_get_size.patch  aarch64-fix.sh  fix_build_error_9.sh  flags_make_autofix.py
src/: CMakeLists.txt
src/clients/deadspy/: CMakeLists.txt  deadspy.cpp
src/clients/deadspy_naive/: CMakeLists.txt  deadspy_naive.cpp
src/clients/loadspy/: CMakeLists.txt  loadspy.cpp
src/clients/loadspy_naive/: CMakeLists.txt  loadspy_naive.cpp
src/clients/mul_followed_by_div/: CMakeLists.txt  mul_followed_by_div.cpp
src/clients/redspy/: CMakeLists.txt  redspy.cpp
src/clients/redspy_naive/: CMakeLists.txt  redspy_naive.cpp
src/clients/trivialspy/: CMakeLists.txt  dataflow.h  dataflow_summary.h  trivial_define.h  trivial_detector.h  trivial_discovery.h  trivial_func_table_impl.h  trivial_logger.h  trivial_op_table_impl.h  trivial_report.h  trivial_table.h  trivial_table_defines.h  trivialspy.cpp  utils.h
src/clients/value_freq/: CMakeLists.txt  value_freq.cpp
src/clients/vprofile_all_opnd/: CMakeLists.txt  vprofile_all_opnd.cpp
src/clients/vprofile_all_opnd_sd/: CMakeLists.txt  vprofile_all_opnd_sd.cpp
src/clients/vprofile_mem_and_reg/: CMakeLists.txt  vprofile_mem_and_reg.cpp
src/clients/vprofile_mem_and_reg_read/: CMakeLists.txt  vprofile_mem_and_reg_read.cpp
src/clients/vprofile_mem_and_reg_read_sd/: CMakeLists.txt  vprofile_mem_and_reg_read_sd.cpp
src/clients/vprofile_mem_and_reg_sd/: CMakeLists.txt  vprofile_mem_and_reg_sd.cpp
src/clients/vprofile_memory/: CMakeLists.txt  vprofile_memory.cpp
src/clients/vprofile_memory_read/: CMakeLists.txt  vprofile_memory_read.cpp
src/clients/vprofile_memory_read_sd/: CMakeLists.txt  vprofile_memory_read_sd.cpp
src/clients/vprofile_memory_sd/: CMakeLists.txt  vprofile_memory_sd.cpp
src/clients/vprofile_print_value/: CMakeLists.txt  pxortest.s  vprofile_print_value.cpp
src/clients/vtrace_all_opnd/: CMakeLists.txt  utils.h  vtrace_all_opnd.cpp
src/clients/vtrace_instrs_first_opnd/: CMakeLists.txt  divtest.s  utils.h  vtrace_instrs_first_opnd.cpp
src/clients/zerospy/: CMakeLists.txt  zerospy.cpp
src/clients/zerospy_data_centric/: CMakeLists.txt  bitvec.h  utils.h  zerospy_data_centric.cpp
src/clients/zerospy_naive/: CMakeLists.txt  zerospy_naive.cpp
src/drcctlib/: CMakeLists.txt  drcctlib.cpp  drcctlib.h  drcctlib_defines.h
src/vprofile/: CMakeLists.txt  shadow_memory_lock.h  utils.h  vprofile.cpp  vprofile.h  vprofile_defines.h  vprofile_filter_func_list.h
src/vprofile/common/: log.cpp  log.h
src/vprofile/vlogger/: vlogger.h
src/vprofile/vreporter/: vreporter.h
src/vprofile/vtracer/: vtracer.cpp  vtracer.h  vtracer_define.h
test_apps/src/: test_app_keep_running_multithread.cpp  test_math.cpp
